--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -27,6 +27,15 @@
     note = {Accessed on 22.03.2016}
 }
 
+@misc{MELD.CH2-relationaleDB.ranking, 
+    author = {solidIT},
+    year = {2016},
+    title = {DB-Engines Ranking},
+    howpublished = "\url{http://db-engines.com/en/ranking}",
+    note = {Accessed on 22.03.2016}
+}
+
+
 @misc{MELD.CH2-relationaleDB.performacne, 
     author = {Christoforos Hadjigeorgiou},
     year = {2013},
@@ -96,6 +105,30 @@
     year = {unkown},
     title = {SQL vs NoSQL},
     howpublished = "\url{http://www.ccs.neu.edu/home/kathleen/classes/cs3200/20-NoSQLMongoDB.pdf}",
+    note = {Accessed on 24.03.2016}
+}
+
+@misc{MELD.CH2-noSQL.maturity, 
+    author = {S. Srinivas},
+    year = {2015},
+    title = {Security maturity in NoSQL databases - are they secure enough to haul the modern IT applications?},
+    howpublished = "\url{http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=7275699&}",
+    note = {Accessed on 24.03.2016}
+}
+
+@misc{MELD.CH2-noSQL.administration, 
+    author = {MongoDB Dev. Group},
+    year = {2015},
+    title = {Left Behind: DBAs in the NoSQL/DBaaS world},
+    howpublished = "\url{https://s3.amazonaws.com/info-mongodb-com/10gen_Top_5_NoSQL_Considerations.pdf}",
+    note = {Accessed on 24.03.2016}
+}
+
+@misc{MELD.CH2-noSQL.considerations, 
+    author = {MongoDB Dev. Group},
+    year = {2014},
+    title = {Top 5 Considerations When Evaluating NoSQL Databases},
+    howpublished = "\url{https://www.ctl.io/developers/blog/post/left-behind-dbas-in-the-nosqldbaas-world}",
     note = {Accessed on 24.03.2016}
 }
 
