--- a/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
+++ b/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
@@ -1,9 +1,12 @@
 \lfoot{Autor: Raphael Simsek}
 \subsection{Analyse und Verbesserung des Fahrstils}
 
-Häufig kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen oder wünschenswerten Fahrstil näher bringen, da dies oft auch ein zeitintensiver Prozess ist. Aus diesem Grund machten wir uns Gedanken wie man diese Situation verbessern kann.
+\todo{Bezug auf wie sie in der Graphik unten erkennen können, auf wie sie in Abb. 1 erkennen können ändern}
+\todo{Sätze mit max. 1 Beistrich formulieren}
+\todo{Reihenfolge der Paragraphen ändern}
+Häufig kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen oder wünschenswerten Fahrstil näher bringen. Dies ist nämlich oft ein zeitintensiver Prozess ist. Aus diesem Grund wurden sich Gedanken dazu gemacht, wie man diese Situation verbessern kann.
 
-\subsubsection{Was möchten wir umgesetzt?}
+\subsubsection{Was soll umgesetzt werden?}
 \begin{itemize}
 	\item Echtzeit Messung und Errechnung der Beschleunigungskräfte, des Schadstoffausstoßes und eines Schaltvorschlags mittels der OBD-II Schnittstelle
 	\item Darstellung des Schaltvorschlags, Fahrkomforts und Schadstoßes in einer Android Applikation
@@ -11,23 +14,23 @@ Häufig kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen od
 	\item retrospektive Analyse des errechneten Verbrauchs einer Fahrt
 	\item Darstellung der retrospektiven Analyse mittels einer Web-Applikation
 	\item Sharing Möglichkeiten für die Analyse seiner Fahrt
-	\item Umsetzung eines Car-PC
+	\item Realisierung eines Car-PC
 \end{itemize}
 
 \subsubsection{Sharing}
-Am Beginn des Projektes wurde überlegt, ob es bereits bekannte Systeme gibt, um seinen Fahrstil nachhaltig zu verbessern. Dabei stach der Fakt heraus, dass es bereits in vielen anderen Bereichen Apps gibt, welche sich das \textit{Sharing}-Prinzip zu Nutze machen und damit äußerst erfolgreich Ihre Kunden zu einer Veränderung Ihrer Gewohnheiten bringen \cite{SIMR.CH1-fahrstil-analyse.GewohnheitenLoslassen}. Eines der bekanntesten österreichischen Beispiele ist das, stetig erweiterte, App-System von Runtastic. \cite{SIMR.CH1-Fahrstil-Analyse.BusinessplanRuntastic}
-Nur in Bezug auf das Autofahren konnte kein System, das dieses Prinzip verfolgt, gefunden werden.
+Am Beginn des Projektes wurde nach bereits bekannten Systemen gesucht, um seinen Fahrstil nachhaltig zu verbessern. Bei dieser Suche stach die Verbreitung von Apps mit \textit{Sharing}-Funktion heraus. Es gibt nämlich bereits in vielen anderen Bereichen Apps, die sich das \textit{Sharing}-Prinzip zu Nutze machen und damit äußerst erfolgreich Ihre Kunden zu einer Veränderung Ihrer Gewohnheiten bringen \cite{SIMR.CH1-fahrstil-analyse.GewohnheitenLoslassen}. Eines der bekanntesten österreichischen Beispiele ist das App-System von Runtastic \cite{SIMR.CH1-Fahrstil-Analyse.BusinessplanRuntastic}.
+Nur im Bezug auf das Autofahren konnte kein derartiges System  gefunden werden.
 
-Zu Beginn des Diplomprojektes gab es also keine Möglichkeiten für verbesserungswillige Autofahrer ihren Fahrstil zu verbessern und dies dann sogar zu teilen. 
+Zu Beginn des Diplomprojektes gab es folglich keine Möglichkeiten für verbesserungswillige Autofahrer ihren Fahrstil zu verbessern und dies dann sogar zu teilen. 
 \newpage
 \paragraph{Peer-Pressure} 
 \begin{wrapfigure}{r}{0.6\textwidth}\centering
     \includegraphics[width=0.6\textwidth]{images/peerPressure}
     \caption{Verhaltensanalyse von Kindern bei gegenseitigem Monitoring \cite{SIMR.CH1-fahrstil-analyse.PeerPressure}} \label{Fig:imgPeerPressure}
 \end{wrapfigure}
-Das Teilen der Fahrstilanalyse trägt aufgrund des \textit{Peer-Pressure}-Effekts dazu bei, dass die Nutzer ihren Fahrstil verbessern, da Sie andere Nutzer überbieten möchten. Diese Theorie bestätigt eine Studie, bei der sich Schüler gegenseitig beobachten. Die Studie zeigt,  dass Menschen, wenn Sie von gleichgesinnten umgeben sind (i.e. Social Network) sich selbst weit mehr beherrschen und sich auf Ihre Vernunft besinnen. \cite{SIMR.CH1-fahrstil-analyse.PeerPressure} So würden sich Fahrer dadurch  stetig zu verbessern.
+Das Teilen der Fahrstilanalyse trägt durch \textit{Peer-Pressure}  dazu bei, dass die Nutzer andere Nutzer überbieten möchten und so ihren eigenen Fahrstil verbessern. Diese Theorie bestätigt eine Studie, bei der sich Schüler gegenseitig beobachten. Die Studie zeigt, dass von gleichgesinnten umgebene und überwachte Schüler (hier Social Network) sich selbst angepasster verhalten und sich auf Ihre Vernunft besinnen \cite{SIMR.CH1-fahrstil-analyse.PeerPressure}. Es würden sich Fahrer folglich genauso vernünftiger fahren, wie sich die Schüler in dieser Studie verhalten haben.
 
-Bei der Evaluierung des Project Scope fiel uns besonders auf, dass eine Analyse-Funktion für die nachhaltige Verbesserung des Fahrstils behilflich sein könnte. Es wurde für diese Analyse evaluiert, welche Funktionalitäten am Wichtigsten sind, wobei diese auch innerhalb der Diplomarbeit realisierbar sein sollten. \newline
+Bei der Evaluierung des Project Scope fiel uns besonders auf, dass eine Analyse-Funktion für die nachhaltige Verbesserung des Fahrstils behilflich sein könnte. Es wurde für diese Analyse evaluiert, welche Funktionalitäten am Wichtigsten sind, wobei diese auch innerhalb der Diplomarbeit realisierbar sein sollten.
 
 \subsubsection{Fahrkomfortanalyse}
 Eine Analyse des Fahrstils, nach Parametern der Fahrgastbequemlichkeit, ist gar nur bei Sportwagen und Fahrzeugen, die für den Rennbetrieb gedacht sind, verbaut. Hierbei ist anzumerken, dass bei derartigen Fahrzeugen die Funktionalität nicht für das frühzeitige Verbessern des Fahrstils eines Fahrers verwendet wird, sondern für die Optimierung von Rundenzeiten auf einer Rennstrecke oder schier für das Ausreizen des Möglichen.
@@ -37,12 +40,12 @@ Eine Analyse des Fahrstils, nach Parametern der Fahrgastbequemlichkeit, ist gar 
 	\caption{Analyse Möglichkeiten bei einem Nissan GT-R (R35) \cite{SIMR.CH1-Fahrstil-Analyse.GTRMultifunc}}\label{Fig:imgGTR}
 \end{figure}
 
-Im Kontrast zu bisherig etablierten Möglichkeiten, soll die Anzeige der Fahrgastbequemlichkeit, dem Fahrer eher zeigen welche Kurven dieser, anhand seiner Beschleunigungskräfte, zu schnell durchfahren hat. Genauere Ausführungen zu diesem Thema, können unter Kapitel 3.5 - Fahrkomfortanalyse gefunden werden.
+Im Kontrast zu bisher etablierten Möglichkeiten ist die Anzeige der Fahrgastbequemlichkeit anhand fundamental anderen Parametern aufgebaut. Sie soll dem Fahrer aufzeigen welche Kurven dieser zu schnell durchfahren hat. Als Maß für die Bequemlichkeit wird dabei die Beschleunigungskraft in g [Kraft/Masse] herangezogen. Genauere Ausführungen zu diesem Thema, können unter Kapitel 3.5 - Fahrkomfortanalyse gefunden werden.
 
 \subsubsection{Schaltvorschlag}
 Der bisherige Schaltvorschlag in einem Auto ist, insbesondere bei kostengünstigeren Fahrzeugen, oft äußerst simpel gehalten, wobei ab einer gewissen Drehzahl die darauffolgenden Gänge vorgeschlagen werden oder auf den Normzyklus optimiert wird. \cite{SIMR.CH1-Fahrstil-Analyse.Schaltempfehlung} 
 \paragraph{Normzyklus}
-Der Normzyklus ist insbesondere aufgrund des VW-Skandals bekannt geworden, nämlich erkennt die Motorsteuerung, wenn ein Abgastest gefahren wird, welcher in der Fachsprache als Normzyklus bezeichnet wird. \cite{SIMR.CH1-fahrstil-analyse.Normzyklus} Der \textit{modifizierte neue europäische Fahrzyklus (MNEFZ)} ist der Normzyklus, der innerhalb der EU verwendet wird um den Normverbrauch eines Fahrzeuges zu errechnen. Dieser umfasst insgesamt 1180 Sekunden, also fast 20 Minuten, wovon 780 Sekunden unter Stadtbedingungen und 400 Sekunden über Land gefahren werden. Dieser wird hauptsächlich aufgrund der Tricks, die Autohersteller verwenden dürfen, kritisiert, denn die Angaben der Hersteller werden in Europa selten hinterfragt. \cite{SIMR.CH1-fahrstil-analyse.MNEFZ}
+Der Normzyklus ist insbesondere aufgrund des VW-Skandals bekannt geworden. Es erkennt die Motorsteuerung nämlich, wenn ein Abgastest gefahren wird. Dieser wird in der Fachsprache als Normzyklus bezeichnet wird \cite{SIMR.CH1-fahrstil-analyse.Normzyklus}. Der \textit{modifizierte neue europäische Fahrzyklus (MNEFZ)} ist der Normzyklus, der innerhalb der EU verwendet wird um den Normverbrauch eines Fahrzeuges zu errechnen. Dieser umfasst insgesamt 1180 Sekunden, wovon 780 Sekunden unter Stadtbedingungen und 400 Sekunden über Land gefahren werden. Er wird hauptsächlich aufgrund der Tricks, die Autohersteller verwenden dürfen, kritisiert. Herstellerangaben werden in Europa nämlich selten hinterfragt \cite{SIMR.CH1-fahrstil-analyse.MNEFZ}. Besonders in den USA mussten dafür die Automobilhersteller hohe Entschädigungen zahlen (cite: http://www.spiegel.de/auto/aktuell/geschoente-verbrauchswerte-bmw-muss-angaben-beim-mini-korrigieren-a-999742.html#ref=plista)
 \paragraph{Carnot-Prozess}
 Der Motorwirkungsgrad nach dem Carnot-Prozess, wird für den Schaltvorschlag meist nicht verwendet. Der Carnot-Prozess beschreibt die Errechnung des \textit{theoretisch möglichen} Motorwirkungsgrad, ohne hinzuziehen von Reibung, Temperatur und anderen natürlichen Einflussgrößen. \cite{SIMR.CH1-Fahrstil-Analyse.CarnotWirkungsgrad} Genauere Ausführungen zu diesem Thema können im Kaptiel 2.1.2 - Thermodynamik gefunden werden. 
 
@@ -71,7 +74,7 @@ Es gibt bisher bei konkurrierenden Echtzeit-Anzeigen (wie. z.B. Torque Pro \cite
 	\caption{Möglichkeiten mit der kostenpflichtigen Torque App  und der OBD Schnittstelle \cite{SIMR.CH1-Fahrstil-Analyse.TorquePro}}\label{Fig:imgGTR}
 \end{figure}
 
-Gerade diese Funktionalität würde aber von Fahranfängern benötigt werden um frühzeitig und selbstständig Fehler ihres Fahrstils zu erkennen und auszubessern zu können. Insbesondere konnten wir, unter anderem anhand unserer Erfahrungen, feststellen, dass das Schalten und das gleichmäßige und verbrauchsarme Fahren für viele Fahranfänger eine Herausforderung darstellt. Durch eine Analysefunktion könnten motivierte Fahranfänger Anfangsschwieriegkeiten schneller ablegen und die schlechten Angewohnheiten würden sich nicht im  Gedächtnis eines Fahranfängers verankern. Stattdessen es würden sich, unter regelmäßiger Verwendung der Applikation, bei motivierten Fahrern nur positive Charakteristika gemerkt werden, wie wir bei regelmäßigem Fahren mit einer erfahrenen Person merken konnten.
+Gerade diese Funktionalität würde aber von Fahranfängern benötigt werden um frühzeitig und selbstständig Fehler ihres Fahrstils zu erkennen und auszubessern zu können. Insbesondere konnten wir, unter anderem anhand unserer Erfahrungen, feststellen, dass das Schalten und das gleichmäßige und verbrauchsarme Fahren für viele Fahranfänger eine Herausforderung darstellt. Durch eine Analysefunktion könnten motivierte Fahranfänger Anfangsschwieriegkeiten schneller ablegen und die schlechten Angewohnheiten würden sich nicht im  Gedächtnis eines Fahranfängers verankern. Stattdessen es würden sich, unter regelmäßiger Verwendung der Applikation, bei motivierten Fahrern nur positive Charakteristika gemerkt werden, wie bei regelmäßigem Fahren mit einer erfahrenen Person merken konnten.
 
 Eine Analysefunktion in Form einer Webapplikation ist also insbesondere für die Lernkurve bei einem noch ungeübten Kraftfahrzeug-Lenker von großem Vorteil, da diese oft noch nach dem Erhalt des Führerscheins unsicher bezüglich ihres Fahrstils sind und ihnen des Öfteren wiederholt die selben Fehler unterlaufen. Eine genauere Beschreibung der Umsetzung der Web Applikation ist unter Kapitel 3.7 - Web App auffindbar.
 
