--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -3,26 +3,26 @@
 
 
 \textbf{Definition und Entstehung\newline}
-\ce{CO2} wird umgangssprachlich Kohlenstoffdioxid genannt und ist die zusammengesetzt aus einem Kohlenstoff-Atom und zwei Sauerstoff-Atomen. 
-Die charkteristischen Eigenschaften von \ce{CO2} sind Unsichtbarkeit und Geruchslosigkeit. 
+Kohlenstoffdioxid (\ce{CO2}) ist ein unsichtbares, geruchsloses Gas bestehend aus einem Kohlenstoff und zwei Sauerstoff-Atomen. 
 In jedem Stoffwechselprozess spielt Kohlenstoffdioxid eine wichtige Rolle, da beispielsweise der Mensch \ce{CO2} ausatmet. 
 Bei vielen Energiegewinnungsverfahren werden durch Verbrennung Energien freigesetzt, die als Nebenprodukt Kohlenstoff produzieren. 
-In der freien Luft werden diese Kohlenstoffpartikel zu \ce{CO2}.
+In der freien Luft verbinden sich diese Kohlenstoffpartikel mit Sauerstoff zu \ce{CO2}.
 \ce{CO2} ist Reaktionsträge und besitzt keine giftige Eigenschaft. 
 Das Problem mit den Unmengen an ausgestoßenem \ce{CO2} ist, dass sein massives Vorkommen die Atmosphäre beschädigt.
 
-Alle Fahrzeuge, die Kraftstoffe als Energiequelle nutzen 
+Alle Fahrzeuge, die fossile Brennstoffe als Energiequelle nutzen 
 (wie zum Beispiel Diesel, Flüssiggas, Benzin und auch Biotreibstoff), erzeugen Kohlenstoff als Abgas. 
 Indem der Motor den Kraftstoff zusammen mit Luftsauerstoff verbrennt, gelangt das \ce{CO2} über die Abgasanlage in die Atmosphäre. 
 Eine effektive Methode zur Beseitigung der Kohlenstoffpartikel gibt es zurzeit nicht. 
 Der benutzte Kraftstoff bestimmt, wie viel \ce{CO2} bei der Verbrennung als Nebenprodukt entsteht.
 Beispielsweise entsteht bei der Verbrennung von einem Liter Diesel mehr Kohlenstoffdioxid, als bei einem Liter Benzin.
-Der Kraftstoffverbrauch eines Kraftfahrzeugs und sein \ce{CO2}-Output stehen daher in enger Verbindung.
+Der Kraftstoffverbrauch eines Kraftfahrzeugs und sein \ce{CO2}-Ausstoß stehen daher in enger Verbindung.
 Demnach existieren Werte, die man als Grenze für den Verbrauch festlegen kann. 
 Heutzutage spricht man von der Einheit Gramm pro Kilometer [g/km] als normierte Verbrauchsmessung.
-Der Lenker eines PKW hat natürlicherweise Einfluss auf seinen \ce{CO2}-Ausstoß. 
-Dieses Umweltbewusstsein wollen wir im Rahmen dieser Diplomarbeit weitervererben, indem wir den Benutzerinnen und Benutzern 
-von BestShift Tipps zum sparsamen und umweltschonenden Fahren geben. \nextline
+Der Lenker eines PKW hat Einfluss auf seinen \ce{CO2}-Ausstoß, indem dieser bei starken und überflüssigen Beschleunigungsmanövern
+zu diesem Zeitpunkt mehr Schadstoffe produziert als nötig.
+Mit diesem Diplomprojekt, wollen wir Fahrenden ein Werkzeug in die Hand geben, ihren \ce{CO2}-Ausstoß während und nach der Fahrt
+einschätzen zu können. Damit haben sie die Möglichkeit ihre Fahrweise in Hinblick auf den \ce{CO2}-Ausstoß zu verbessern. \nextline
 
 
 \textbf{Treibhauseffekt}
@@ -31,18 +31,15 @@ von BestShift Tipps zum sparsamen und umweltschonenden Fahren geben. \nextline
     \includegraphics[width=0.6\textwidth]{images/treibhaus1}
     \caption{Der Treibhauseffekt \cite{BOZH.ch1-co2-umwelt.treibhaus1}}
 \end{wrapfigure}
-
-Kohlenstoffdioxid ist ein sogenanntes Abfallprodukt, welches bei Verbrennungsprozessen zur Energiegewinnung entsteht. 
-\ce{CO2} gilt als Vorreiter der Treibhausgase.
-Die negative Umweltauswirkung, welche zustande kommt indem Unmengen an \ce{CO2} in die Atmosphäre gelangen, 
-nennt sich Treibhauseffekt. 
-Der Treibhauseffekt ist eine der Hauptursachen für den Klimawandel, welcher drastische Folgen für Natur, Tiere und Menschen hat. 
-Zu viel \ce{CO2} in der Atmosphäre bringt unter anderem das Abschmelzen von Gletschern, 
-den Anstieg der Meerestemperatur, den Anstieg des Meeresspiegels, 
-Aussterben von Pflanzen und Tieren und Wetterphänomene wie zum Beispiel sehr warme Winter, Stürme etc.
+ 
+\ce{CO2} gilt als eines der häufigsten Treibhausgase.
 Das Kohlenstoffdioxid steigt bis zur Atmosphäre auf und bildet dort eine \textit{Mauer}.
 Sonnenstrahlen können zwar ohne weiteres durch, doch nicht so leicht wieder raus. Das heisst, dass die Sonnenstrahlen,
-die von der Erdoberfläche wieder zurück in den Weltraum reflektiert werden sollten, von der Erdatmosphäre zurück auf die Erde geworfen werden.\nextline
+die von der Erdoberfläche wieder zurück in den Weltraum reflektiert werden sollten, von der Erdatmosphäre zurück auf die Erde geworfen werden.
+Der Treibhauseffekt gilt als eine der Hauptursachen für den Klimawandel, welcher drastische Folgen für Natur, Tiere und Menschen hat. 
+Zu viel \ce{CO2} in der Atmosphäre bringt unter anderem das Abschmelzen von Gletschern, 
+den Anstieg der Meerestemperatur, den Anstieg des Meeresspiegels, 
+Aussterben von Pflanzen und Tieren und Wetterphänomene wie zum Beispiel sehr warme Winter, Stürme etc.\nextline
  
 \textbf{Das Kyoto-Protokoll\newline}
 Im Rahmen des Kyoto-Protokolls haben sich viele westliche Staaten zu einer Reduktion der Treibhausgase verpflichtet. 
