--- a/diplomarbeit/sections/ch1_introduction/projekt-management.tex
+++ b/diplomarbeit/sections/ch1_introduction/projekt-management.tex
@@ -1,23 +1,24 @@
 \lfoot{Autor: Hüseyin Bozkurt}
 \subsection{Projekt Management}
 
-Da BestShift keiner konkreten Angabe unterlag,
+Da BestShift einer gewissen Bandbreite an Angaben unterlag, welche nicht von Anfang an fixiert waren,
 mussten wir uns auf kurzfristige Änderungen gefasst machen, da die Herangehensweise der Implementierung der fahrzeugtechnischen Aspekte für uns noch nicht bekannt waren.
 Das Team durfte über den Umfang des Projektes, bis auf kleine Vorgaben, selbst entscheiden.
 Aufgrund dessen haben wir uns für eine agile Projektmanagementmethode entschieden. 
 Wir haben uns für SCRUM entschieden, da es zielführendes Arbeiten unterstützt und die inkrementelle Entwicklung von Software ermöglicht. 
-Ausserdem ist Transparenz ein sehr wichtiger Punkt, da unser Projektleiter immer auf dem aktuellsten Stand sein muss. Diese Transparenz ermöglicht es, Schwachstellen schnell aufzudecken und ist wesentlich für die Produktivität von SCRUM.
+Ausserdem ist Transparenz ein sehr wichtiger Punkt, da unser Auftaggeber immer auf dem aktuellsten Stand sein muss. Diese Transparenz ermöglicht es, Schwachstellen schnell aufzudecken und ist wesentlich für die Produktivität von SCRUM.
 Gezieltes Risikomanagement kann durch SCRUM ebenfalls betrieben werden. 
 
 \subsubsection{SCRUM}
 Unter agilem Projektmanagement, insbesondere SCRUM, gibt es den sogenannten
-Sprint; ein zeitlich Begrenzter Arbeitsaufwand. Ein Sprint wird logischerweise im vorhinein geplant, wobei man Wert auf den \textit{scope of work} (zu erledigende Arbeitspakete) legt. 
+Sprint; ein zeitlich begrenzter Arbeitsaufwand. Ein Sprint wird logischerweise im vorhinein geplant, wobei Wert auf den \textit{scope of work} (zu erledigende Arbeitspakete) gelegt wird. 
 Zusätzlich dazu, gibt es zum Beginn einer jeden
-Arbeitsphase ein kleines stand-up Meeting (Daily Scrum Meeting). In diesem Meeting erklärt jedes Mitglied was es in der letzten Arbeitsphase gearbeitet hat, was es in dieser Arbeitsphase tun wird und welche Probleme es beim Arbeiten gegeben hat.
-Anders als bei der traditionellen Variante hat SCRUM den großen Vorteil, dass neue User Stories, und damit euch neue Funktionen der Software, on-the-go, also während das Projekt bereits läuft, hinzugefügt werden können. Grundsätzlich kann man sagen, dass SCRUM sinnvoll ist, wenn man mögliche Veränderungen anstrebt.
+Arbeitsphase ein kleines Meeting (Daily Scrum Meeting). In diesem Meeting erklärt jedes Mitglied was es in der letzten Arbeitsphase gearbeitet hat, was es in dieser Arbeitsphase tun wird und welche Probleme es beim Arbeiten gegeben hat.
+Anders als bei der traditionellen Variante hat SCRUM den großen Vorteil, dass neue User Stories, und damit neue Funktionen der Software, on-the-go, also während das Projekt bereits läuft, hinzugefügt werden können. 
+Grundsätzlich ist also SCRUM sinnvoll, wenn man mögliche Veränderungen erwartet. Jedoch sind die Grundelemente der erzeugten Software (und somit der Umfang der Userstories) sehr früh festgelegt.
 
 \subsubsection{Artefakte und Sprints}
-Das Diplomprojekt BestShift wurde von Anfang an in 5 Sprints aufgeteilt, welche pünktlich vom Proejektleiter abgenommen wurden.
+Das Diplomprojekt BestShift wurde in 5 Sprints aufgeteilt.
 \begin{description}
 \item Sprint 01: 18.Nov 2015 - 09.Dez 2015
 \item Sprint 02: 09.Dez 2015 - 13.Jan 2016
@@ -27,7 +28,7 @@ Das Diplomprojekt BestShift wurde von Anfang an in 5 Sprints aufgeteilt, welche 
 \end{description}
 
 Diese Sprints wurden durch die sogenannten Abnahmeprotokolle verifiziert.
-Zu jedem Sprint gab es ebenfalls Sprintdokumentationen, die umschreibt was konkret während des Sprints passiert ist.
+Zu jedem Sprint gibt es ebenfalls Sprintdokumentationen, die umschreiben was konkret während eines Sprints passiert ist.
 
 
 \clearpage % DO NOT REMOVE
